# hakke_deploy

./: README.md  deno.jsonc  import_map.json
.docker/: docker-compose.yaml
cli/: hakkectl.ts
examples/: file_server.ts
examples/foo/: deps.ts  mod.ts
gateway/: .gitignore  docker-compose.yaml
hakke_deploy/: README.md  docker-compose.yaml
hakke_deploy/conf.d/: hakke_deploy.conf
libs/x/subprocess/: README.md
playground/unix/: README.md  bar.ts  foo.ts  gateway.ts
playground/unix/uds/: Cargo.toml
playground/unix/uds/src/: main.rs
runtime/: mod.ts
sdk/: deps.ts  mod.ts  utils.ts
