[package]
name = "uds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://docs.rs/hyper/latest/hyper/index.html
hyper = { version = "0.14.20", features = ["full"] }
# https://docs.rs/tokio/latest/tokio/
tokio = { version = "1.19.2", features = ["full"] }
